Deuxième version de mon site
Création des différents fichiers HTML pour chaque partie du CV

--- a/competences.html
+++ b/competences.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Rohann Bella - Accueil </title>
+    <title> Rohann Bella - Compétences </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
@@ -11,10 +11,10 @@
     <header>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                <a class="nav-link" href="index.html">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
+                <a class="nav-link active" aria-current="page" href="#">Compétences</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="formations.html">Formations</a>
@@ -31,8 +31,17 @@
         </ul>
     </header>
 
-    <h2>Accueil</h2>
+    <h2>Compétences</h2>
 
-    <img src="img/arobase.png" alt="email" width=5%>
+    <h3>Informatique</h3>
+    <ul>
+        <li> Langages de programmation : C, Python, Rust, R, Matlab, Scilab</li>
+        <li> Bureautique : Word, Excel, Powerpoint</li>
+    </ul>
+
+    <h3>Langues</h3>
+    <ul>
+        <li> Anglais : niveau scolaire</li>
+    </ul>
 
 </body>
