Troisième version de mon site
Ajout de textes et d'images

--- a/autres_exp.html
+++ b/autres_exp.html
@@ -5,47 +5,44 @@
     <title> Rohann Bella - Autres Expériences </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_cv.css" />
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="formations.html">Formations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Autres Expériences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="projets.html">Projets Académiques</a>
-            </li>
-        </ul>
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link" href="index.html">Accueil</a>
+            <a class="nav-link" href="competences.html">Compétences</a>
+            <a class="nav-link" href="formations.html">Formations</a>
+            <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
+            <a class="nav-link active" aria-current="page" href="#">Autres Expériences</a>
+            <a class="nav-link" href="projets.html">Projets Académiques</a>
+        </nav>
     </header>
 
-    <h2>Autres Expériences</h2>
-    <div class="container">
-        <div class="row rows-cols-2">
-            <div class="col-3 text-end">2016-2020</div>
-            <div class="col-9">Facteur
-                <br>La Poste (Bourges)
-                <br> Travail pendant l'été tous les ans entre 2016 et 2020 (durée d'un mois en 2016 et 2017 puis de deux
-                mois les années suivantes)
-            </div>
-            <div class="col-3 text-end">Juin 2012 - Juin 2018</div>
-            <div class="col-9">Arbitre Officiel de Football
-                <br> Arbitre dans le département du Cher de compétitions jeunes aux niveaux régionales et
-                départementales
+    <main>
+        <h2>Autres Expériences</h2>
+        <div class="container">
+            <div class="row rows-cols-2">
+                <div class="col-3 text-end"><p class="fw-bold">2016-2020</p></div>
+                <div class="col-9">Facteur
+                    <p class="fst-italic">La Poste (Bourges)</p>
+                    <p>Travail pendant l'été tous les ans entre 2016 et 2020 (durée d'un mois en 2016 et 2017 puis de
+                    deux
+                    mois les années suivantes)</p>
+                </div>
+                <div class="col-3 text-end"><p class="fw-bold">Juin 2012 - Juin 2018</p></div>
+                <div class="col-9"><p>Arbitre Officiel de Football
+                    <br> Arbitre dans le département du Cher de compétitions jeunes aux niveaux régionales et
+                    départementales</p>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
+    <footer>
+        <a href="https://www.linkedin.com/in/rohann-bella-3254a7184">
+            <img src="img/logo_linkedin.png" width=25px>
+        </a>
+    </footer>
 </body>
