--- a/competences.html
+++ b/competences.html
@@ -5,43 +5,39 @@
     <title> Rohann Bella - Compétences </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_cv.css" />
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Compétences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="formations.html">Formations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="projets.html">Projets Académiques</a>
-            </li>
-        </ul>
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link" href="index.html">Accueil</a>
+            <a class="nav-link active" aria-current="page" href="#">Compétences</a>
+            <a class="nav-link" href="formations.html">Formations</a>
+            <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
+            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
+            <a class="nav-link" href="projets.html">Projets Académiques</a>
+        </nav>
     </header>
 
-    <h2>Compétences</h2>
+    <main>
+        <h2>Compétences</h2>
 
-    <h3>Informatique</h3>
-    <ul>
-        <li> Langages de programmation : C, Python, Rust, R, Matlab, Scilab</li>
-        <li> Bureautique : Word, Excel, Powerpoint</li>
-    </ul>
+        <h3>Informatique</h3>
+        <ul>
+            <li> Langages de programmation : C, Python, Rust, R, Matlab, Scilab</li>
+            <li> Bureautique : Word, Excel, Powerpoint</li>
+        </ul>
 
-    <h3>Langues</h3>
-    <ul>
-        <li> Anglais : niveau scolaire</li>
-    </ul>
+        <h3>Langues</h3>
+        <ul>
+            <li> Anglais : niveau scolaire</li>
+        </ul>
+    </main>
 
+    <footer>
+        <a href="https://www.linkedin.com/in/rohann-bella-3254a7184">
+            <img src="img/logo_linkedin.png" width=25px>
+        </a>
+    </footer>
 </body>
