--- a/experiences_pro.html
+++ b/experiences_pro.html
@@ -5,51 +5,38 @@
     <title> Rohann Bella - Expériences Professionnelles </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_cv.css" />
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="formations.html">Formations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Expériences Professionnelles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="projets.html">Projets Académiques</a>
-            </li>
-        </ul>
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link" href="index.html">Accueil</a>
+            <a class="nav-link" href="competences.html">Compétences</a>
+            <a class="nav-link" href="formations.html">Formations</a>
+            <a class="nav-link active" aria-current="page" href="#">Expériences Professionnelles</a>
+            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
+            <a class="nav-link" href="projets.html">Projets Académiques</a>
+        </nav>
     </header>
-</body>
 
-<main>
-    <h2>Expériences Professionnelles</h2>
-    <div class="container">
-        <div class="row rows-cols-2">
-            <div class="col-3 text-end">Mars - Août 2021</div>
-            <div class="col-9">Ingénieur en Cryptographie <br> INSA Centre-Val-de-Loire (Bourges) <br> Stage de fin
-                d'études du Master
-                <ul>
-                    <li> Projet : Implémentation d'un protocole sécurisé du jeu Atout Pique</li>
-                    <ul>
-                        <li>Recherche documentaire de différentes preuves Zero-Knowledge possibles pour notre implémentation</li>
-                        <li>Présentation au tuteur de plusieurs articles lus pendant la recherche documentaire</li>
-                        <li>Appretissage du langage de programmation Rust</li>
-                        <li>Implémentation du protocole avec différentes versions disponibles</li>
-                        <li>Test de performance des différentes versions</li>
-                    </ul>
-                </ul>
+
+    <main>
+        <h2>Expériences Professionnelles</h2>
+        <div class="container">
+            <div class="row rows-cols-2">
+                <div class="col-3 text-end"><p class="fw-bold">Mars - Août 2021</p></div>
+                <div class="col-9">Ingénieur en Cryptographie <p class="fst-italic"> INSA Centre-Val-de-Loire (Bourges) </p> Stage de fin
+                    d'études du Master CRYPTIS <br>
+                    Projet : Implémentation d'un protocole sécurisé du jeu Atout Pique
+                </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
+
+    <footer>
+        <a href="https://www.linkedin.com/in/rohann-bella-3254a7184">
+            <img src="img/logo_linkedin.png" width=25px>
+        </a>
+    </footer>
+</body>
