--- a/formations.html
+++ b/formations.html
@@ -5,30 +5,19 @@
     <title> Rohann Bella - Formations </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_cv.css" />
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Formations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="projets.html">Projets Académiques</a>
-            </li>
-        </ul>
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link" href="index.html">Accueil</a>
+            <a class="nav-link" href="competences.html">Compétences</a>
+            <a class="nav-link active" aria-current="page" href="#">Formations</a>
+            <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
+            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
+            <a class="nav-link" href="projets.html">Projets Académiques</a>
+        </nav>
     </header>
 
     <main>
@@ -36,14 +25,20 @@
             <h2>Formations</h2>
             <div class="container">
                 <div class="row rows-cols-2">
-                    <div class="col-2 text-end">2019-2021</div>
-                    <div class="col-10">Master CRYPTIS Parcours Mathématiques <br> Université de Limoges (Limoges)</div>
-                    <div class="col-2 text-end">2015-2018</div>
-                    <div class="col-10">Licence de Mathématiques <br> Université d'Orléans (Orléans)</div>
-                    <div class="col-2 text-end">2012-2015</div>
-                    <div class="col-10">Baccalauréat Scientifique <br> Lycée Marguerite de Navarre (Bourges)</div>
+                    <div class="col-2 text-end"><p class="fw-bold">2019-2021</p></div>
+                    <div class="col-10">Master CRYPTIS Parcours Mathématiques <p class="fst-italic"> Université de Limoges (Limoges)</p></div>
+                    <div class="col-2 text-end"><p class="fw-bold">2015-2018</p></div>
+                    <div class="col-10">Licence de Mathématiques <p class="fst-italic">Université d'Orléans (Orléans)</p></div>
+                    <div class="col-2 text-end"><p class="fw-bold">2012-2015</p></div>
+                    <div class="col-10">Baccalauréat Scientifique <p class="fst-italic"> Lycée Marguerite de Navarre (Bourges)</p></div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <a href="https://www.linkedin.com/in/rohann-bella-3254a7184">
+            <img src="img/logo_linkedin.png" width=25px>
+        </a>
+    </footer>
 </body>
