--- a/index.html
+++ b/index.html
@@ -5,34 +5,58 @@
     <title> Rohann Bella - Accueil </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_cv.css" />
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="formations.html">Formations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="projets.html">Projets Académiques</a>
-            </li>
-        </ul>
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+            <a class="nav-link" href="competences.html">Compétences</a>
+            <a class="nav-link" href="formations.html">Formations</a>
+            <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
+            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
+            <a class="nav-link" href="projets.html">Projets Académiques</a>
+        </nav>
     </header>
 
-    <h2>Accueil</h2>
+    <main>
+        <h2>Accueil</h2>
+        <div class="container">
+            <div class="row align-items-start">
+                <div class="col">
+                    <h3>A propos de Moi</h3>
+                    <p>
+                        Je suis Rohann Bella, actuellement en formation pour devenir Architecte Logiciel Java/JEE,
+                        à la suite d'un Master en Mathématiques au cours duquel j'ai développé des compétences en
+                        programmation sur plusieurs langages différents.
+                    </p>
+                    <h3> Contact </h3>
+                    <p>
+                        <img src="img/enveloppe.png" alt="adresse" width=25px>
+                    <address>
+                        Rohann BELLA <br>
+                        20 rue de Bel-Air <br>
+                        18230 Saint-Doulchard
+                    </address>
+                    </p>
+                    <p>
+                        <img src="img/telephone.png" alt="telephone" width=25px> (+33)06.19.39.23.19
+                    </p>
+                    <p>
+                        <img src="img/arobase.png" alt="email" width=25px> rohann.bella@hotmail.fr
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="" alt="photo">
+                </div>
+            </div>
+        </div>
+    </main>
 
-    <img src="img/arobase.png" alt="email" width=5%>
-
+    <footer>
+        <a href="https://www.linkedin.com/in/rohann-bella-3254a7184">
+            <img src="img/logo_linkedin.png" width=25px>
+        </a>
+    </footer>
 </body>
