--- a/projets.html
+++ b/projets.html
@@ -5,47 +5,45 @@
     <title> Rohann Bella - Projets Académiques </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_cv.css" />
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="formations.html">Formations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Projets Académiques</a>
-            </li>
-        </ul>
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link" href="index.html">Accueil</a>
+            <a class="nav-link" href="competences.html">Compétences</a>
+            <a class="nav-link" href="formations.html">Formations</a>
+            <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
+            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
+            <a class="nav-link active" aria-current="page" href="#">Projets Académiques</a>
+        </nav>
     </header>
 
-    <h2>Projets Académiques</h2>
+    <main>
+        <h2>Projets Académiques</h2>
 
-    <ul>
-        <li>Master 1 :</li>
         <ul>
-            <li>Programmation d'une machine de Turing en C</li>
-            <li>Conception d'un protocole de communication TCP/IP sécurisé par RSA en Python</li>
-            <li>Article sur le calcul de la période d'une suite récurrente linéaire cubique modulo un nombre premier</li>
-            <li>Droit et Conduite de Projet : Création d'une vidéo de promulgation du Master</li>
+            <li>Master 1 :</li>
+            <ul>
+                <li>Programmation d'une machine de Turing en C</li>
+                <li>Conception d'un protocole de communication TCP/IP sécurisé par RSA en Python</li>
+                <li>Article sur le calcul de la période d'une suite récurrente linéaire cubique modulo un nombre premier
+                </li>
+                <li>Droit et Conduite de Projet : Création d'une vidéo de promulgation du Master</li>
+            </ul>
+            <li>Master 2 :</li>
+            <ul>
+                <li>Techniques simples de factorisation d'entiers en C avec GMP</li>
+                <li>Cryptanalyse de LLL du cryptosystème RSA</li>
+                <li>Cryptanalyse différentielle sur le chiffrement de KLEIN</li>
+            </ul>
         </ul>
-        <li>Master 2 :</li>
-        <ul>
-            <li>Techniques simples de factorisation d'entiers en C avec GMP</li>
-            <li>Cryptanalyse de LLL du cryptosystème RSA</li>
-            <li>Cryptanalyse différentielle sur le chiffrement de KLEIN</li>
-        </ul>
-    </ul>
+    </main>
+
+    <footer>
+        <a href="https://www.linkedin.com/in/rohann-bella-3254a7184">
+            <img src="img/logo_linkedin.png" width=25px>
+        </a>
+    </footer>
 </body>
