Quatrième version de mon site CV
Regroupement des fichiers expériences pro et autres expériences

--- a/experiences_pro.html
+++ b/experiences_pro.html
@@ -15,7 +15,6 @@
             <a class="nav-link" href="competences.html">Compétences</a>
             <a class="nav-link" href="formations.html">Formations</a>
             <a class="nav-link active" aria-current="page" href="#">Expériences Professionnelles</a>
-            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
             <a class="nav-link" href="projets.html">Projets Académiques</a>
         </nav>
     </header>
@@ -25,10 +24,36 @@
         <h2>Expériences Professionnelles</h2>
         <div class="container">
             <div class="row rows-cols-2">
-                <div class="col-3 text-end"><p class="fw-bold">Mars - Août 2021</p></div>
-                <div class="col-9">Ingénieur en Cryptographie <p class="fst-italic"> INSA Centre-Val-de-Loire (Bourges) </p> Stage de fin
+                <div class="col-3 text-end">
+                    <p class="fw-bold">Mars - Août 2021</p>
+                </div>
+                <div class="col-9">Ingénieur en Cryptographie <p class="fst-italic"> INSA Centre-Val-de-Loire (Bourges)
+                    </p> Stage de fin
                     d'études du Master CRYPTIS <br>
                     Projet : Implémentation d'un protocole sécurisé du jeu Atout Pique
+                </div>
+            </div>
+        </div>
+        <h2>Autres Expériences</h2>
+        <div class="container">
+            <div class="row rows-cols-2">
+                <div class="col-3 text-end">
+                    <p class="fw-bold">2016-2020</p>
+                </div>
+                <div class="col-9">Facteur
+                    <p class="fst-italic">La Poste (Bourges)</p>
+                    <p>Travail pendant l'été tous les ans entre 2016 et 2020 (durée d'un mois en 2016 et 2017 puis de
+                        deux
+                        mois les années suivantes)</p>
+                </div>
+                <div class="col-3 text-end">
+                    <p class="fw-bold">Juin 2012 - Juin 2018</p>
+                </div>
+                <div class="col-9">
+                    <p>Arbitre Officiel de Football
+                        <br> Arbitre dans le département du Cher de compétitions jeunes aux niveaux régionales et
+                        départementales
+                    </p>
                 </div>
             </div>
         </div>
