--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <a class="nav-link" href="competences.html">Compétences</a>
             <a class="nav-link" href="formations.html">Formations</a>
             <a class="nav-link" href="experiences_pro.html">Expériences Professionnelles</a>
-            <a class="nav-link" href="autres_exp.html">Autres Expériences</a>
             <a class="nav-link" href="projets.html">Projets Académiques</a>
         </nav>
     </header>
@@ -30,6 +29,9 @@
                         Je suis Rohann Bella, actuellement en formation pour devenir Architecte Logiciel Java/JEE,
                         à la suite d'un Master en Mathématiques au cours duquel j'ai développé des compétences en
                         programmation sur plusieurs langages différents.
+                    </p>
+                    <p>
+                        Si vous voulez consulter mon CV en format papier cliquez sur ce <a href="img/CV_2022-01-24_ROHANN_BELLA.pdf">lien</a>.
                     </p>
                     <h3> Contact </h3>
                     <p>
